Fix .brand-logo.left with .sidebar-trigger
Add rule so that applying the left class to a brand logo no longer causes it to overlap with the sidebar trigger, if present. If not, keep original behavior.

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -79,6 +79,11 @@ nav {
       }
 
       &.left { left: 0.5rem; }
+      
+      .sidenav-trigger~&.left{
+          left:unset;
+      }
+      
       &.right {
         right: 0.5rem;
         left: auto;
